# gtd-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gtd_mcp/: __init__.py  server.py
src/gtd_mcp/gmail/: __init__.py  auth.py  client.py  exceptions.py  tools.py
src/gtd_mcp/outlook/: __init__.py
src/gtd_mcp/todoist/: __init__.py  client.py  tools.py
tests/: conftest.py  test_gmail_auth.py  test_gmail_client.py  test_gmail_tools.py  test_todoist_batch.py  test_todoist_client.py  test_todoist_tools.py
